--- a/styles/print.scss
+++ b/styles/print.scss
@@ -103,7 +103,7 @@ content {
             font-weight: 700;
         }
         &[name="sc"]::before {
-            content: 'Student Code:';
+            content: 'ID:';
             padding-right: .5rem;
         }
         &[name="sb"] {
