--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,26 @@ html {
   font-size: 10px;
   box-sizing: border-box;
 }
+@media only screen and (max-width: 1280px) {
+  html {
+    font-size: 9.5px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  html {
+    font-size: 9px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 8.5px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  html {
+    font-size: 8px;
+  }
+}
 html, html.darkmode {
   --background-1: #0b1023;
   --background-2: #1e293b;
@@ -78,7 +98,7 @@ content > span {
   font-family: var(--serif);
   font-size: 6rem;
   font-weight: 700;
-  position: absolute;
+  position: fixed;
   top: 5rem;
   cursor: pointer;
 }
@@ -93,7 +113,7 @@ content button {
   border: 0;
   height: 5rem;
   padding: 0 2rem;
-  position: absolute;
+  position: fixed;
   bottom: 5rem;
   border-radius: 6px;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.0509803922);
@@ -116,12 +136,22 @@ content form {
   flex-direction: column;
   gap: 3.75rem;
 }
+@media only screen and (max-width: 400px) {
+  content form {
+    height: calc(100svh - 30rem);
+    justify-content: flex-start;
+    overflow: auto;
+  }
+}
 content form div {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 1.25rem;
+}
+content form div:has(> #swap) {
+  gap: 0;
 }
 content form input[type=text] {
   font-family: var(--mono);
@@ -137,4 +167,27 @@ content form input[type=text] {
 }
 content form input[type=text]:hover, content form input[type=text]:focus {
   background: var(--background-2h);
+}
+@media only screen and (max-width: 400px) {
+  content form input[type=text] {
+    width: 80svw;
+  }
+}
+content form #swap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  height: 4rem;
+  background: var(--accent);
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.0509803922);
+  border-radius: 6px 0 0 6px;
+  font-family: var(--mono);
+}
+content form #swap:hover, content form #swap:focus {
+  cursor: pointer;
+  background: var(--accent-h);
+}
+content form #swaptarget {
+  border-radius: 0 6px 6px 0;
 }/*# sourceMappingURL=main.css.map */
