--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,12 @@
     width: $size;
 }
 
+@mixin resize($width, $size) {
+    @media only screen and (max-width: #{$width}) {
+        font-size: #{$size};
+    }
+}
+
 * {
     scrollbar-width: thin !important;
     scrollbar-color: var(--accent-1) #00000000 !important;
@@ -44,6 +50,10 @@ html {
     --mono: 'Cascadia Code', monospace;
     font-family: var(--serif);
     font-size: 10px;
+    @include resize(1280px, 9.5px);
+    @include resize(1024px, 9px);
+    @include resize(768px, 8.5px);
+    @include resize(640px, 8px);
     box-sizing: border-box;
     &, &.darkmode {
         --background-1: #0b1023;
@@ -87,7 +97,7 @@ content {
         font-family: var(--serif);
         font-size: 6rem;
         font-weight: 700;
-        position: absolute;
+        position: fixed;
         top: 5rem;
         cursor: pointer;
         &:hover, &:focus {
@@ -102,7 +112,7 @@ content {
         border: 0;
         height: 5rem;
         padding: 0 2rem;
-        position: absolute;
+        position: fixed;
         bottom: 5rem;
         border-radius: 6px;
         box-shadow: inset 0 1px 0 0 #ffffff0d;
@@ -124,12 +134,20 @@ content {
         justify-content: center;
         flex-direction: column;
         gap: 3.75rem;
+        @media only screen and (max-width: 400px) {
+            height: calc(100svh - 30rem);
+            justify-content: flex-start;
+            overflow: auto;
+        }
         div {
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
             gap: 1.25rem;
+            &:has(> #swap) {
+                gap: 0;
+            }
         }
         input[type='text'] {
             font-family: var(--mono);
@@ -145,6 +163,27 @@ content {
             &:hover, &:focus {
                 background: var(--background-2h);
             }
+            @media only screen and (max-width: 400px) {
+                width: 80svw;
+            }
+        }
+        #swap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 1.5rem;
+            height: 4rem;
+            background: var(--accent);
+            box-shadow: inset 0 1px 0 0 #ffffff0d;
+            border-radius: 6px 0 0 6px;
+            font-family: var(--mono);
+            &:hover, &:focus {
+                cursor: pointer;
+                background: var(--accent-h);
+            }
+        }
+        #swaptarget {
+            border-radius: 0 6px 6px 0;
         }
     }
 }
