--- a/styles/print.scss
+++ b/styles/print.scss
@@ -152,12 +152,13 @@ content {
 
 #print {
     position: fixed;
-    bottom: 3rem;
-    right: 3rem;
+    bottom: 2rem;
+    right: 2rem;
     background: #0ea5e9;
     color: #f8fafc;
     font-family: 'Cascadia Code', monospace;
-    padding: 2rem 2rem;
+    font-size: 1.2rem;
+    padding: 1.6rem;
     border-radius: 6px;
     cursor: pointer;
     box-shadow: inset 0 1px 0 0 #ffffff0d, 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
