--- a/styles/main.scss
+++ b/styles/main.scss
@@ -54,6 +54,8 @@ html {
     @include resize(1024px, 9px);
     @include resize(768px, 8.5px);
     @include resize(640px, 8px);
+    // @include resize(580px, 7.5px);
+    // @include resize(480px, 7px);
     box-sizing: border-box;
     &, &.darkmode {
         --background-1: #0b1023;
@@ -136,7 +138,7 @@ content {
         justify-content: center;
         flex-direction: column;
         gap: 3.75rem;
-        @media only screen and (max-width: 400px) {
+        @media only screen and (max-width: 480px) {
             height: calc(100svh - 30rem);
             justify-content: flex-start;
             overflow: auto;
@@ -147,7 +149,7 @@ content {
             align-items: center;
             justify-content: center;
             gap: 1.25rem;
-            @media only screen and (max-width: 400px) {
+            @media only screen and (max-width: 480px) {
                 width: 100%;
                 flex-direction: column;
                 > input[type='text'] {
@@ -157,8 +159,8 @@ content {
             &:has(> #swap) {
                 gap: 0;
                 flex-wrap: nowrap;
-                @media only screen and (max-width: 400px) {
-                    flex-direction: row;
+                @media only screen and (max-width: 480px) {
+                    flex-direction: row-reverse;
                     > input[type='text'] {
                         min-width: unset;
                         flex: 1 0 auto;
@@ -180,7 +182,7 @@ content {
             &:hover, &:focus {
                 background: var(--background-2h);
             }
-            @media only screen and (max-width: 400px) {
+            @media only screen and (max-width: 480px) {
                 width: 1px;
                 flex: 1 0 auto;
             }
@@ -195,6 +197,9 @@ content {
             box-shadow: inset 0 1px 0 0 #ffffff0d;
             border-radius: 6px 0 0 6px;
             font-family: var(--mono);
+            @media only screen and (max-width: 480px) {
+                border-radius: 0 6px 6px 0;
+            }
             &:hover, &:focus {
                 cursor: pointer;
                 background: var(--accent-h);
@@ -202,6 +207,9 @@ content {
         }
         #swaptarget {
             border-radius: 0 6px 6px 0;
+            @media only screen and (max-width: 480px) {
+                border-radius: 6px 0 0 6px;
+            }
         }
     }
 }
