--- a/styles/print.scss
+++ b/styles/print.scss
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 .no-select {
     -webkit-touch-callout:none;
     -webkit-user-select:none;
@@ -18,7 +22,6 @@ html {
     --mono: 'Cascadia Code', monospace;
     font-family: var(--serif);
     font-size: 12px;
-    box-sizing: border-box;
 }
 
 body {
@@ -58,6 +61,10 @@ body {
 content {
     height: 100%;
     width: 100%;
+    @media only screen {
+        max-height: calc(100svw * 1.41428571428571);
+        max-width: calc(100svh * 0.707070707070707);
+    }
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,18 +75,17 @@ content {
         align-items: center;
         justify-content: center;
     }
-    table {
+    div.outline {
+        border: 1px solid rgba(0,0,0,.2);
+        border-radius: 6px;
+        height: 1px;
+        min-height: 5rem;
+        padding: 2.5rem 2.5rem;
+        text-align: center;
         width: 70%;
-        margin: 0 auto;
-        thead {
+        max-width: 70%;
+        &:has(.none) {
             display: none;
-        }
-        td {
-            border: 1px solid rgba(0,0,0,.2);
-            border-radius: 6px;
-            height: 5rem;
-            padding: 0 2rem;
-            text-align: center;
         }
     }
     span {
@@ -151,6 +157,9 @@ content {
 }
 
 #print {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     bottom: 2rem;
     right: 2rem;
@@ -158,7 +167,8 @@ content {
     color: #f8fafc;
     font-family: 'Cascadia Code', monospace;
     font-size: 1.2rem;
-    padding: 1.6rem;
+    height: 4.8rem;
+    padding: 0 1.6rem;
     border-radius: 6px;
     cursor: pointer;
     box-shadow: inset 0 1px 0 0 #ffffff0d, 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -171,4 +181,8 @@ content {
     @media print {
         display: none;
     }
+}
+
+.none {
+    display: none;
 }
