--- a/styles/main.css
+++ b/styles/main.css
@@ -184,11 +184,13 @@ content form i:has(> input[type=text]) {
   border-left: 3px solid transparent;
 }
 content form i:has(> input[type=text]) input[type=text] {
+  position: relative;
   height: 100%;
   width: 100%;
   border: 0;
   color: inherit;
   background: transparent;
+  z-index: 1;
 }
 content form i:has(> input[type=text]) label {
   position: absolute;
@@ -200,6 +202,7 @@ content form i:has(> input[type=text]) label {
   top: 0;
   padding: 0 1.5rem;
   opacity: 0.5;
+  z-index: 0;
   cursor: text;
 }
 content form i:has(> input[type=text]):focus-within label, content form i:has(> input[type=text]).keepabove label {
@@ -208,7 +211,7 @@ content form i:has(> input[type=text]):focus-within label, content form i:has(> 
   font-size: 1.2rem;
   cursor: default;
 }
-content form i:has(> input[type=text]):hover, content form i:has(> input[type=text]):focus {
+content form i:has(> input[type=text]):has(input[type=text]:hover), content form i:has(> input[type=text]):has(input[type=text]:focus) {
   background: var(--background-2h);
 }
 @media only screen and (max-width: 480px) {
@@ -216,13 +219,10 @@ content form i:has(> input[type=text]):hover, content form i:has(> input[type=te
     max-width: unset;
   }
 }
-content form i:has(> input[type=text])[required] {
+content form i:has(> input[type=text]):has(input[required]) {
   border-color: var(--accent);
 }
-content form i:has(> input[type=text]):not([required]) {
-  border-color: transparent;
-}
-content form #swap {
+content form #swap1, content form #swap2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -233,11 +233,11 @@ content form #swap {
   border-radius: 0 6px 6px 0;
   font-family: var(--mono);
 }
-content form #swap:hover, content form #swap:focus {
+content form #swap1:hover, content form #swap1:focus, content form #swap2:hover, content form #swap2:focus {
   cursor: pointer;
   background: var(--accent-h);
 }
-content form i:has(> #swaptarget) {
+content form i:has(> #swaptarget1), content form i:has(> #swaptarget2) {
   border-radius: 6px 0 0 6px;
 }
 
