--- a/styles/print.css
+++ b/styles/print.css
@@ -102,7 +102,7 @@ content span[name=cc]::after {
   content: ":";
   padding-right: 0.8rem;
 }
-content span[name=tn], content span[name=tc], content span[name=td], content span[name=at], content span[name=sn], content span[name=sc], content span[name=si], content span[name=sr], content span[name=sb], content span[name=ss], content span[name=sd], content span[name=dn], content span[name=un] {
+content span[name=tn], content span[name=tc], content span[name=td], content span[name=at], content span[name=sn], content span[name=sc], content span[name=si], content span[name=sr], content span[name=sb], content span[name=in], content span[name=ss], content span[name=sd], content span[name=dn], content span[name=un] {
   font-size: 1.5rem;
 }
 content span[name=tc]::before {
@@ -132,7 +132,11 @@ content span[name=sb]::before {
   content: "Batch:";
   padding-right: 0.5rem;
 }
-content span[name=sb]::after {
+content span[name=in]::before {
+  content: "Intake:";
+  padding-right: 0.5rem;
+}
+content span[name=sb]:has(+ span[name=ss]:not(.none))::after, content span[name=in]:has(+ span[name=ss]:not(.none))::after {
   content: ",";
   padding-right: 0.5rem;
 }
