--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,7 +46,7 @@ html {
 }
 
 html {
-    --serif: 'Times New Roman', serif;
+    --serif: 'FreeSerifLinguist', 'Times New Roman', serif;
     --mono: 'Cascadia Code', monospace;
     font-family: var(--serif);
     font-size: 10px;
