--- a/styles/print.css
+++ b/styles/print.css
@@ -17,7 +17,7 @@ html {
 }
 
 html {
-  --serif: "Times New Roman", serif;
+  --serif: "FreeSerifLinguist", "Times New Roman", serif;
   --mono: "Cascadia Code", monospace;
   font-family: var(--serif);
   font-size: 12px;
@@ -35,27 +35,6 @@ body {
   justify-content: center;
 }
 
-/*
-    cc  Course Code
-    cn  Course Name
-
-    tn  Teacher Name
-    tc  Teacher Short Code
-    td  Teacher Designation
-
-    ah  Assignment Heading
-    at  Assignment Topic
-
-    sn  Student Name
-    sc  Student Code
-    sb  Student Batch
-    ss  Student Section
-
-    sd  Submission Date
-
-    dn  Department Name
-    un  University Name
-*/
 content {
   height: 100%;
   width: 100%;
@@ -136,7 +115,11 @@ content span[name=in]::before {
   content: "Intake:";
   padding-right: 0.5rem;
 }
-content span[name=sb]:has(+ span[name=ss]:not(.none))::after, content span[name=in]:has(+ span[name=ss]:not(.none))::after {
+content span[name=sb]:has(+ span + span[name=ss]:not(.none))::after {
+  content: ",";
+  padding-right: 0.5rem;
+}
+content span[name=in]:has(+ span[name=ss]:not(.none))::after {
   content: ",";
   padding-right: 0.5rem;
 }
