--- a/styles/print.css
+++ b/styles/print.css
@@ -26,7 +26,7 @@ html {
 body {
   color: black;
   fill: black;
-  background: white;
+  background: #181818;
   padding: 0;
   margin: 0;
   font-size: 1.5rem;
@@ -38,11 +38,13 @@ body {
 content {
   height: 100%;
   width: 100%;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 1.6rem;
+  /* When Assignment Topic is Null */
 }
 @media only screen {
   content {
@@ -140,15 +142,16 @@ content span[name=sd] {
 content span.none {
   display: none;
 }
+content:has(> .outline > .none) span[name=ah], content:has(> .outline > .none) span[name=sn] {
+  margin-top: 11.4rem;
+}
 
-#print {
+#print, #download {
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
-  bottom: 2rem;
   right: 2rem;
-  background: #0ea5e9;
   color: #f8fafc;
   font-family: "Cascadia Code", monospace;
   font-size: 1.2rem;
@@ -158,16 +161,29 @@ content span.none {
   cursor: pointer;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.0509803922), 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#print:hover, #print:focus {
-  background: #38bdf8;
-}
-#print:active {
+#print:active, #download:active {
   transform: translateY(3px);
 }
 @media print {
-  #print {
+  #print, #download {
     display: none;
   }
+}
+
+#print {
+  bottom: 9rem;
+  background: #0ea5e9;
+}
+#print:hover, #print:focus {
+  background: #38bdf8;
+}
+
+#download {
+  bottom: 2rem;
+  background: #eb550f;
+}
+#download:hover, #download:focus {
+  background: #ff6c10;
 }
 
 .none {
