--- a/styles/print.css
+++ b/styles/print.css
@@ -19,14 +19,20 @@ html {
 html {
   --serif: "PT Serif", "Times New Roman", serif;
   --mono: "Cascadia Code", monospace;
+  --font-scale: 80;
   font-family: var(--serif);
   font-size: 12px;
 }
+@media only screen {
+  html {
+    font-size: calc((var(--vH) + var(--vW)) / 2 / var(--font-scale));
+  }
+}
 
 body {
-  color: black;
-  fill: black;
-  background: #181818;
+  color: #000000;
+  fill: #000000;
+  background: #191919;
   padding: 0;
   margin: 0;
   font-size: 1.5rem;
@@ -38,7 +44,7 @@ body {
 content {
   height: 100%;
   width: 100%;
-  background: white;
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -58,7 +64,7 @@ content div {
   justify-content: center;
 }
 content div.outline {
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid #cccccc;
   border-radius: 6px;
   height: 1px;
   min-height: 5rem;
@@ -151,12 +157,12 @@ content:has(> .outline > .none) span[name=ah], content:has(> .outline > .none) s
   align-items: center;
   justify-content: center;
   position: fixed;
-  right: 2rem;
+  right: 24px;
   color: #f8fafc;
   font-family: "Cascadia Code", monospace;
-  font-size: 1.2rem;
-  height: 4.8rem;
-  padding: 0 1.6rem;
+  font-size: 14.4px;
+  height: 57.6px;
+  padding: 0 19.2px;
   border-radius: 6px;
   cursor: pointer;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.0509803922), 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -171,7 +177,7 @@ content:has(> .outline > .none) span[name=ah], content:has(> .outline > .none) s
 }
 
 #print {
-  bottom: 9rem;
+  bottom: 99px;
   background: #0ea5e9;
 }
 #print:hover, #print:focus {
@@ -179,7 +185,7 @@ content:has(> .outline > .none) span[name=ah], content:has(> .outline > .none) s
 }
 
 #download {
-  bottom: 2rem;
+  bottom: 24px;
   background: #eb550f;
 }
 #download:hover, #download:focus {
