--- a/styles/print.scss
+++ b/styles/print.scss
@@ -20,14 +20,18 @@ html {
 html {
     --serif: 'PT Serif', 'Times New Roman', serif;
     --mono: 'Cascadia Code', monospace;
+    --font-scale: 80;
     font-family: var(--serif);
     font-size: 12px;
+    @media only screen {
+        font-size: calc((var(--vH) + var(--vW)) / 2 / var(--font-scale));
+    }
 }
 
 body {
-    color: black;
-    fill: black;
-    background: #181818;
+    color: #000000;
+    fill: #000000;
+    background: #191919;
     padding: 0;
     margin: 0;
     font-size: 1.5rem;
@@ -39,7 +43,7 @@ body {
 content {
     height: 100%;
     width: 100%;
-    background: white;
+    background: #ffffff;
     @media only screen {
         max-height: calc(100svw * 1.41428571428571);
         max-width: calc(100svh * 0.707070707070707);
@@ -55,7 +59,7 @@ content {
         justify-content: center;
     }
     div.outline {
-        border: 1px solid rgba(0,0,0,.2);
+        border: 1px solid #cccccc;//rgba(0,0,0,.2);
         border-radius: 6px;
         height: 1px;
         min-height: 5rem;
@@ -165,12 +169,12 @@ content {
     align-items: center;
     justify-content: center;
     position: fixed;
-    right: 2rem;
+    right: calc(2 * 12px);//2rem;
     color: #f8fafc;
     font-family: 'Cascadia Code', monospace;
-    font-size: 1.2rem;
-    height: 4.8rem;
-    padding: 0 1.6rem;
+    font-size: calc(1.2 * 12px);//1.2rem;
+    height: calc(4.8 * 12px);//4.8rem;
+    padding: 0 calc(1.6 * 12px);//1.6rem;
     border-radius: 6px;
     cursor: pointer;
     box-shadow: inset 0 1px 0 0 #ffffff0d, 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -183,7 +187,7 @@ content {
 }
 
 #print {
-    bottom: 9rem;
+    bottom: calc(8.25 * 12px);//9rem;
     background: #0ea5e9;
     &:hover, &:focus {
         background: #38bdf8;
@@ -191,7 +195,7 @@ content {
 }
 
 #download {
-    bottom: 2rem;
+    bottom: calc(2 * 12px);//2rem;
     background: #eb550f;
     &:hover, &:focus {
         background: #ff6c10;
