--- a/styles/fontasm.css
+++ b/styles/fontasm.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Fontasm";
-  src: url("../fonts/fontasm.woff2?20250015013222") format("woff2"), url("../fonts/fontasm.woff?20250015013222") format("woff");
+  src: url("../fonts/fontasm.woff2?20250904194959") format("woff2"), url("../fonts/fontasm.woff?20250904194959") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,4 +17,7 @@
 }
 .fa.fa-swap::before {
   content: "\e001";
+}
+.fa.fa-return::before {
+  content: "\e002";
 }/*# sourceMappingURL=fontasm.css.map */
