--- a/styles/fontasm.scss
+++ b/styles/fontasm.scss
@@ -1,4 +1,4 @@
-$version: 20250015013222;
+$version: 20250904202824;
 
 @font-face {
     font-family: "Fontasm";
@@ -21,5 +21,8 @@ $version: 20250015013222;
     }
     &.fa-swap::before {
         content: "\E001";
+    }
+    &.fa-return::before {
+        content: "\E002";
     }
 }
